# ModbusReader

./: Cargo.toml  README.md
.cargo/: config.toml
src/: input_register.rs  main.rs
