[package]
name = "energy_usage"
version = "0.1.0"
edition = "2021"
authors = ["jaroslaw.kubiec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"
strum = "0.24"
strum_macros = "0.24"